--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Drupal phing #
+<h1>Drupal phing</h1>
 Drupal phing is environment for drupal developers
 allow to take control over the code and database.
 It makes possible real CI and CD for Drupal.
